[package]
name = "tweet-tree"
description = "crawls a tweet and its replies"
version = "0.1.0"
edition = "2018"

[dependencies]
# derive_more = "0.99"
egg-mode = { version = "0.15", features = ["rustls"], default-features = false }
petgraph = "0.5"
structopt = "0.3"
color-eyre = "0.5"
tokio = { version = "1", features = ["full"] }
once_cell = "1.7"
