[package]
name = "tweet-tree"
description = "crawls a tweet and its replies"
version = "0.1.0"
edition = "2018"

[dependencies]
chrono = "0.4"
color-eyre = "0.5"
egg-mode = { version = "0.15", features = ["rustls"], default-features = false }
futures = "0.3"
once_cell = "1.7"
petgraph = "0.5"
rand = "0.8"
serde = "1"
structopt = "0.3"
tokio = { version = "1", features = ["full"] }

[patch.crates-io]
egg-mode = { git = "https://github.com/rrbutani/egg-mode" }
